--- a/CardViewController/Source/CardViewController.xib
+++ b/CardViewController/Source/CardViewController.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Self referencing constraints of the same attribute" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,17 +15,13 @@
                 <viewControllerLayoutGuide type="top" id="iag-ZG-bcI"/>
                 <viewControllerLayoutGuide type="bottom" id="Hr8-dX-U8S"/>
             </layoutGuides>
-            <view key="view" contentMode="scaleToFill" id="0wV-td-5YW">
+            <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="0wV-td-5YW" customClass="ClipView" customModule="CardViewController" customModuleProvider="target">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIf-Mh-bFq">
+                    <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIf-Mh-bFq">
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="b3l-Da-H5R">
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="rW2-Qf-cmL" appends="YES" id="zRb-4W-cF2"/>
-                                </connections>
-                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="b3l-Da-H5R"/>
                         </subviews>
                         <gestureRecognizers/>
                         <constraints>
@@ -39,20 +37,22 @@
                 </subviews>
                 <gestureRecognizers/>
                 <constraints>
-                    <constraint firstItem="b3l-Da-H5R" firstAttribute="width" secondItem="0wV-td-5YW" secondAttribute="width" placeholder="YES" id="GqM-sN-SIa"/>
-                    <constraint firstItem="yIf-Mh-bFq" firstAttribute="leading" secondItem="0wV-td-5YW" secondAttribute="leading" id="LHR-Ty-8P5"/>
-                    <constraint firstAttribute="trailing" secondItem="yIf-Mh-bFq" secondAttribute="trailing" id="VO4-PG-Q83"/>
+                    <constraint firstItem="yIf-Mh-bFq" firstAttribute="width" secondItem="0wV-td-5YW" secondAttribute="width" multiplier="0.5" id="3su-hQ-IQ2"/>
+                    <constraint firstItem="b3l-Da-H5R" firstAttribute="width" secondItem="0wV-td-5YW" secondAttribute="width" placeholder="YES" id="9EN-EG-VIA" userLabel="Placeholder Content View.width = width"/>
+                    <constraint firstAttribute="height" secondItem="0wV-td-5YW" secondAttribute="height" id="M8j-Dx-BIb"/>
+                    <constraint firstItem="yIf-Mh-bFq" firstAttribute="centerX" secondItem="0wV-td-5YW" secondAttribute="centerX" id="S20-ep-fHw"/>
                     <constraint firstItem="yIf-Mh-bFq" firstAttribute="top" secondItem="0wV-td-5YW" secondAttribute="topMargin" id="X3w-Xu-kzL"/>
                     <constraint firstItem="b3l-Da-H5R" firstAttribute="height" secondItem="0wV-td-5YW" secondAttribute="height" id="dD1-rt-AKx"/>
                     <constraint firstAttribute="bottomMargin" secondItem="yIf-Mh-bFq" secondAttribute="bottom" id="l8H-lr-c7b"/>
                 </constraints>
+                <connections>
+                    <outletCollection property="gestureRecognizers" destination="rW2-Qf-cmL" appends="YES" id="Uxu-Db-XrB"/>
+                </connections>
             </view>
             <connections>
                 <outlet property="contentView" destination="b3l-Da-H5R" id="XTU-Qx-5Hw"/>
                 <outlet property="contentViewTapGestureRecognizer" destination="rW2-Qf-cmL" id="YGu-bb-rrH"/>
-                <outlet property="leadingConstraint" destination="f0G-fs-twd" id="HPj-uu-iK0"/>
                 <outlet property="scrollView" destination="yIf-Mh-bFq" id="0Iu-B3-udo"/>
-                <outlet property="trailingConstraint" destination="Jdi-yS-8Aj" id="CrO-mU-YjO"/>
             </connections>
             <point key="canvasLocation" x="1" y="-37"/>
         </viewController>
